--- a/package.json
+++ b/package.json
@@ -14,32 +14,33 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.20.0",
+    "@playwright/test": "^1.22.2",
     "@sveltejs/adapter-node": "next",
     "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^3.4.1",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.8",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.5.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.10.1",
-    "tslib": "^2.3.1",
-    "typescript": "~4.6.2",
-    "video.js": "^7.18.1"
+    "lint-staged": "^12.5.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
+    "svelte": "^3.48.0",
+    "svelte-check": "^2.7.2",
+    "svelte-preprocess": "^4.10.7",
+    "tslib": "^2.4.0",
+    "typescript": "~4.6.4",
+    "video.js": "^7.19.2"
   },
   "type": "module",
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
-    "chart.js": "^3.7.1",
+    "chart.js": "^3.8.0",
     "date-fns": "^2.28.0",
-    "sass": "^1.49.9",
-    "videojs-seek-buttons": "^2.2.0",
+    "sass": "^1.52.2",
+    "videojs-seek-buttons": "^2.2.1",
     "videojs-thumbnail-sprite": "^0.1.1"
   },
   "lint-staged": {
