--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 .DS_Store
-node_modules
-/build
-/.svelte-kit
-/package
 .env
 .env.*
-!.env.example
 .eslintcache
 .pnpm-debug.log
+.svelte-kit
+.vscode
+
+build
+node_modules
+package
 package-lock.json
+
+!.env.example
