--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "archiv-frontend-kit",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "svelte-kit dev --host",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync && husky install",
-    "test": "playwright test",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.22.2",
-    "@sveltejs/adapter-node": "next",
-    "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^3.4.1",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.5.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.48.0",
-    "svelte-check": "^2.7.2",
-    "svelte-preprocess": "^4.10.7",
-    "tslib": "^2.4.0",
-    "typescript": "~4.6.4",
-    "video.js": "^7.19.2"
-  },
-  "type": "module",
-  "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.1.3",
-    "chart.js": "^3.8.0",
-    "date-fns": "^2.28.0",
-    "sass": "^1.52.3",
-    "videojs-seek-buttons": "^2.2.1",
-    "videojs-thumbnail-sprite": "^0.1.1"
-  },
-  "lint-staged": {
-    "*.{js,svelte}": "eslint --cache --fix",
-    "*.{js,css,md,svelte,scss}": "prettier --write"
-  }
+    "name": "archiv-frontend-kit",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "svelte-kit dev --host",
+        "build": "svelte-kit build",
+        "package": "svelte-kit package",
+        "preview": "svelte-kit preview",
+        "prepare": "svelte-kit sync && husky install",
+        "test": "playwright test",
+        "check": "svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+        "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+        "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.22.2",
+        "@sveltejs/adapter-static": "next",
+        "@sveltejs/kit": "next",
+        "@typescript-eslint/eslint-plugin": "^5.29.0",
+        "@typescript-eslint/parser": "^5.29.0",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-svelte3": "^3.4.1",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.5.0",
+        "prettier": "^2.7.1",
+        "prettier-plugin-svelte": "^2.7.0",
+        "svelte": "^3.48.0",
+        "svelte-check": "^2.7.2",
+        "svelte-preprocess": "^4.10.7",
+        "tslib": "^2.4.0",
+        "typescript": "~4.6.4",
+        "video.js": "^7.19.2"
+    },
+    "type": "module",
+    "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.1.3",
+        "chart.js": "^3.8.0",
+        "date-fns": "^2.28.0",
+        "sass": "^1.52.3",
+        "videojs-seek-buttons": "^2.2.1",
+        "videojs-thumbnail-sprite": "^0.1.1"
+    },
+    "lint-staged": {
+        "*.{js,svelte}": "eslint --cache --fix",
+        "*.{js,css,md,svelte,scss}": "prettier --write"
+    }
 }
