--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "scripts": {
         "dev": "svelte-kit dev --host",
-        "build": "svelte-kit build",
+        "build": "VITE_BASE_URL=https://api.wubbl0rz.tv svelte-kit build",
         "package": "svelte-kit package",
         "preview": "svelte-kit preview",
         "prepare": "svelte-kit sync && husky install",
