--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "test": "playwright test",
         "check": "svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-        "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+        "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --fix --ignore-path .gitignore .",
         "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
     },
     "devDependencies": {
@@ -45,7 +45,7 @@
         "videojs-thumbnail-sprite": "^0.1.1"
     },
     "lint-staged": {
-        "*.{js,svelte}": "eslint --cache --fix",
-        "*.{js,css,md,svelte,scss}": "prettier --write"
+        "*.{js,svelte}": "eslint --fix --ignore-path .gitignore .",
+        "*.{js,css,md,svelte,scss}": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
     }
 }
