--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "archiv-frontend-kit",
     "version": "0.0.1",
     "scripts": {
-        "dev": "svelte-kit dev --host",
-        "build": "VITE_BASE_URL=https://api.wubbl0rz.tv svelte-kit build",
-        "build:dev": "VITE_BASE_URL=https://wub-api.inpognito.de svelte-kit build",
+        "dev": "vite dev --host",
+        "build": "VITE_BASE_URL=https://api.wubbl0rz.tv vite build",
+        "build:dev": "VITE_BASE_URL=https://wub-api.inpognito.de vite build",
         "package": "svelte-kit package",
-        "preview": "svelte-kit preview",
+        "preview": "vite preview",
         "prepare": "svelte-kit sync && husky install",
         "test": "playwright test",
         "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -32,7 +32,8 @@
         "svelte-preprocess": "^4.10.7",
         "tslib": "^2.4.0",
         "typescript": "~4.6.4",
-        "video.js": "^7.19.2"
+        "video.js": "^7.19.2",
+        "vite": "^2.9.14"
     },
     "type": "module",
     "dependencies": {
