--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,4 @@ jobs:
                   script: |
                       cd ~/repos/archiv-frontend
                       git pull
-                      npm i
-                      npm run build
+                      docker-compose up -d --build
