--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     },
     "devDependencies": {
         "@playwright/test": "^1.23.2",
-        "@sveltejs/adapter-static": "next",
+        "@sveltejs/adapter-node": "next",
         "@sveltejs/kit": "next",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
